<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_jo_ken_po">

    <fragment
        android:id="@+id/nav_jo_ken_po"
        android:name="tsi.ailton.android.jokenpo.ui.jokenpo.JoKenPoFragment"
        android:label="@string/menu_jo_ken_po"
        tools:layout="@layout/fragment_jo_ken_po" />

    <fragment
        android:id="@+id/nav_ranking"
        android:name="tsi.ailton.android.jokenpo.ui.ranking.RankingFragment"
        android:label="@string/menu_ranking"
        tools:layout="@layout/fragment_ranking" />

    <fragment
        android:id="@+id/nav_game_mode"
        android:name="tsi.ailton.android.jokenpo.ui.gamemode.GameModeFragment"
        android:label="@string/menu_game_mode"
        tools:layout="@layout/fragment_game_mode" />
</navigation>