<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.jokenpo.JoKenPoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scoreboard_constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/player_label_scoreboard_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_label_text_scoreboard"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/player_score_textView"
            app:layout_constraintStart_toStartOf="@+id/player_score_textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/computer_label_scoreboard_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer_label_text_scoreboard"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/computer_score_textView"
            app:layout_constraintStart_toStartOf="@+id/computer_score_textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/player_score_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/player_scoreboard_initial_value"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/scoreboard_scores_separator_TextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_label_scoreboard_textView" />

        <TextView
            android:id="@+id/scoreboard_scores_separator_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoreboard_scores_separator"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/computer_score_textView"
            app:layout_constraintEnd_toStartOf="@+id/computer_score_textView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/player_score_textView"
            app:layout_constraintTop_toTopOf="@+id/computer_score_textView" />

        <TextView
            android:id="@+id/computer_score_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/computer_scoreboard_initial_value"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/scoreboard_scores_separator_TextView"
            app:layout_constraintTop_toBottomOf="@+id/computer_label_scoreboard_textView" />

        <Button
            android:id="@+id/reset_scoreboard_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="resetScoreboard"
            android:text="@string/reset_scoreboard_button_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scoreboard_scores_separator_TextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/scoreboard_computerChoise_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/computer_choice_constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreboard_constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/computer_choice_constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/player_choice_constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreboard_constraintLayout">

        <TextView
            android:id="@+id/computer_choice_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer_choice_label_text"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/computer_choice_imageView"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/computer_choice_label_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/computer_choice_textView"
            app:srcCompat="@color/computer_choose_empty_background_color" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/computerChoice_playerChoice_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/player_choice_constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computer_choice_constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/player_choice_constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/player_choice_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_choice_label_text"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/rock_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/rock"
            android:onClick="playRock"
            app:layout_constraintBottom_toTopOf="@+id/play_again_button"
            app:layout_constraintEnd_toStartOf="@+id/paper_imageButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_choice_textView"
            app:srcCompat="@drawable/ic_rock_72" />

        <ImageButton
            android:id="@+id/paper_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/paper"
            android:onClick="playPaper"
            app:layout_constraintBottom_toTopOf="@+id/play_again_button"
            app:layout_constraintEnd_toStartOf="@+id/scissors_imageButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rock_imageButton"
            app:layout_constraintTop_toBottomOf="@+id/player_choice_textView"
            app:srcCompat="@drawable/ic_paper_72" />

        <ImageButton
            android:id="@+id/scissors_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/scissors"
            android:onClick="playScissors"
            app:layout_constraintBottom_toTopOf="@+id/play_again_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/paper_imageButton"
            app:layout_constraintTop_toBottomOf="@+id/player_choice_textView"
            app:srcCompat="@drawable/ic_scissors_72" />

        <Button
            android:id="@+id/play_again_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="playAgain"
            android:text="@string/play_again_button_text"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>